[package]
name = "blitz"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "blitz_srv"
path = "src/bin/blitz_srv.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full", "tracing"] }
anyhow = { version = "1.0.66", features = ["backtrace"] }
rand = "0.8.5"
mongodb = "2.3.1"
bson = "2.4.0"
dashmap = "5.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio-stream = "0.1.14"
tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.1"
flume = { version = "0.11.0", features = ["async"] }
oneshot = { version = "0.1.6", features = ["async"] }
console-subscriber = "0.2.0"
[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
